fix: store id spacing issue

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -599,6 +599,10 @@ button {
   text-overflow: ellipsis;
 }
 
+.store-info .data-field .title-text {
+  text-wrap: initial;
+}
+
 .data-field.theme-schema .title-text {
   max-width: 70px;
   display: inline-block;
